# two_motor_74HC

./: .gitignore  CMakeLists.txt  GenerateVersionHeader.cmake  README.md
src/: gpio.c  gpio.h  main.c  stepm_74hc.c  stepm_74hc.h
tools/cmake/toolchains/: mipsel-openwrt-linux-musleabi.cmake
